inspector/client-envoy.yaml
static_resources:
  listeners:
  - address:
      socket_address:
        address: 0.0.0.0
        port_value: 80
    filter_chains:
    - filters:
      - name: envoy.http_connection_manager
        typed_config:
          "@type": type.googleapis.com/envoy.config.filter.network.http_connection_manager.v2.HttpConnectionManager
          codec_type: auto
          stat_prefix: ingress_http
          route_config:
            name: local_route
            virtual_hosts:
            - name: service
              domains:
              - "*"
              routes:
              - match:
                  prefix: /anything/2
                route:
                  cluster: server
              - match:
                  prefix: /anything/1
                route:
                  cluster: server_http
          http_filters:
          - name: envoy.router
            typed_config: {}
          http2_protocol_options: {}
  clusters:
  - name: server
    connect_timeout: 0.25s
    type: strict_dns
    lb_policy: round_robin
    http2_protocol_options: {}
    load_assignment:
      cluster_name: server
      endpoints:
      - locality:
          region: US-West
          zone: az1
          sub_zone: sub1
        priority: 0
        lb_endpoints:
        - endpoint:
            address:
              socket_address:
                address: server
                port_value: 443
  - name: server_http
    connect_timeout: 0.25s
    type: strict_dns
    lb_policy: round_robin
    load_assignment:
      cluster_name: server_http
      endpoints:
      - locality:
          region: US-West
          zone: az1
          sub_zone: sub1
        priority: 0
        lb_endpoints:
        - endpoint:
            address:
              socket_address:
                address: server
                port_value: 443
admin:
  access_log_path: "/dev/null"
  address:
    socket_address:
      address: 0.0.0.0
      port_value: 8001
